// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListRenderer — snapshots snapshot: 3 items + separator off (default md gap) 1`] = `
<View
  style={
    {
      "gap": 16,
    }
  }
>
  <Text
    accessibilityRole="header"
    style={
      [
        {
          "fontSize": 28,
          "fontWeight": "700",
        },
        {
          "color": "#0a0a0b",
          "paddingTop": 24,
        },
      ]
    }
  >
    Title
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
        },
        {
          "color": "#0a0a0b",
        },
      ]
    }
  >
    body
  </Text>
  <Text
    accessibilityRole="header"
    style={
      [
        {
          "fontSize": 22,
          "fontWeight": "700",
        },
        {
          "color": "#0a0a0b",
          "paddingTop": 16,
        },
      ]
    }
  >
    Sub
  </Text>
</View>
`;

exports[`ListRenderer — snapshots snapshot: 3 items + separator on (no gap, 1px lines) 1`] = `
<View
  style={
    {
      "gap": 0,
    }
  }
>
  <Text
    accessibilityRole="header"
    style={
      [
        {
          "fontSize": 28,
          "fontWeight": "700",
        },
        {
          "color": "#0a0a0b",
          "paddingTop": 24,
        },
      ]
    }
  >
    Title
  </Text>
  <View
    style={
      {
        "backgroundColor": "#f6f7f9",
        "height": 1,
      }
    }
  />
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
        },
        {
          "color": "#0a0a0b",
        },
      ]
    }
  >
    body
  </Text>
  <View
    style={
      {
        "backgroundColor": "#f6f7f9",
        "height": 1,
      }
    }
  />
  <Text
    accessibilityRole="header"
    style={
      [
        {
          "fontSize": 22,
          "fontWeight": "700",
        },
        {
          "color": "#0a0a0b",
          "paddingTop": 16,
        },
      ]
    }
  >
    Sub
  </Text>
</View>
`;
